--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react": "~18.2.14",
     "expo": "~49.0.15",
@@ -17,11 +18,11 @@
     "react-native": "0.72.6",
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0",
-    "typescript": "^5.1.3",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native": "^0.72.7"
   },
   "private": true
 }
